Remove unused files and update careers page content for clarity

--- a/careers.html
+++ b/careers.html
@@ -127,7 +127,7 @@
           <!-- /.col-md-6 -->
           <div class="col-md-6">
           <div class="quform-element quform-element-text">
-            <p>Company Name</p>
+            <p>Job Title</p>
             <input type="text" name="company" />
           </div>
           </div>
@@ -136,7 +136,7 @@
           <!-- /.col-md-6 -->
           <div class="col-md-12">
           <div class="quform-element quform-element-text">
-            <p>Write Message</p>
+            <p>Resume / Cover Letter</p>
             <textarea name="message"></textarea>
             <div class="quform-element quform-element-recaptcha">
                               <div class="quform-spacer">
@@ -158,11 +158,8 @@
       <!-- /.col-md-8 -->
       <div class="col-md-4">
         <div class="contact-info">
-          <h3>Contact Us Today!</h3>
-          <p>Contact us today and one of our representatives  will be more than happy to assist!</p>
-          <div class="single-contact-info"> <i class="zxp-icon-old-telephone-ringing"></i>
-            <p>646-942-0208</p>
-          </div>
+          <h3>Apply Today!</h3>
+          <p>Add your Resume, Cover Letter, and any other information youd like to be considered and out HR team will take a look and get back to you!</p>
           <!-- /.single-contact-info -->
           <div class="single-contact-info"> <i class="fas fa-envelope-open"></i>
             <p>info@tullacontractingcorp.com</p>
