Fix typo in careers page application instructions

--- a/careers.html
+++ b/careers.html
@@ -159,7 +159,7 @@
       <div class="col-md-4">
         <div class="contact-info">
           <h3>Apply Today!</h3>
-          <p>Add your Resume, Cover Letter, and any other information youd like to be considered and out HR team will take a look and get back to you!</p>
+          <p>Add your Resume, Cover Letter, and any other information you'd like to be considered and our HR team will take a look and get back to you!</p>
           <!-- /.single-contact-info -->
           <div class="single-contact-info"> <i class="fas fa-envelope-open"></i>
             <p>info@tullacontractingcorp.com</p>
